<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ActivateAccountFragment">

    <LinearLayout
        android:id="@+id/verifyCodeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_code_title"
            style="@style/TitleText"/>

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_account_subtitle"
            style="@style/SubtitleText"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:textAlignment="center"
            android:textSize="32sp"
            android:letterSpacing="0.2"
            style="@style/TextInput"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnVerifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_code"
            style="@style/ButtonPrimary"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tvNoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_code"
                style="@style/TextSmall"/>

            <TextView
                android:id="@+id/tvResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_code"
                style="@style/TextSmallBold"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:gravity="center"
            style="@style/TextSmall"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</FrameLayout>